--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "EnrollMe",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,5 +19,25 @@
   "homepage": "https://github.com/joshnsaunders/EnRollMe#readme",
   "devDependencies": {
     "express": "^4.15.4"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "bootstrap-social": "^5.1.1",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
+    "express-session": "^1.15.5",
+    "knex": "^0.13.0",
+    "materialize-css": "^0.100.2",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-auth": "^1.0.2",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth2": "^0.1.6",
+    "passport-oauth2": "^1.4.0",
+    "passport-strategy": "^1.0.0",
+    "passport-twitter": "^1.0.4",
+    "passport-yahoo": "^0.3.0",
+    "passport-yahoo-oauth": "^0.1.2",
+    "path": "^0.12.7"
   }
 }
