--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "bootstrap-social": "^5.1.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "express": "^4.16.1",
     "express-session": "^1.15.5",
     "knex": "^0.13.0",
     "materialize-css": "^0.100.2",
